--- a/pages/search.html
+++ b/pages/search.html
@@ -149,7 +149,7 @@
 
   <div class="art container col-lg-8 mt-5" id="articles">
     <img src="https://m.economictimes.com/thumb/msid-75616788,width-1200,height-900,resizemode-4,imgsize-491202/covidistock.jpg" class="img thumbnail float-left mr-2 ml-md-5 ml-3" width="250px" height="200px">
-    <p><small>20 June 2020</small><br><a href="articles/article1.html"><h5>Road map towards learning Web Dev</h5></a><br><small><b>by <a href="authors.html">Vaishnavi</a> &nbsp; &nbsp; &nbsp; &nbsp; 3 minutes</b></small></p>
+    <p><small>20 June 2020</small><br><a href="articles/article1.html" style="color: inherit;"><h5>Road map towards learning Web Dev</h5></a><br><small><b>by <a href="authors.html" style="color: inherit;">Vaishnavi</a> &nbsp; &nbsp; &nbsp; &nbsp; 3 minutes</b></small></p>
     </div>
   </div>
   <div class="row">
